Fix unwanted scrollbar

--- a/modules/hello/hello.scss
+++ b/modules/hello/hello.scss
@@ -104,8 +104,11 @@ $color-calendar-main: #EF4D3C;
     }
   }
   ul {
+    margin: 0;
     display : inline-block;
     padding-left: 10px;
+    height: 95%;
+    overflow-y: hidden;
     li {
       font-size: 1.25em;
       line-height: 1.2em;
